# rules_kubedog

./: BUILD.bazel  CONTRIBUTING.md  README.md  WORKSPACE  internal_deps.bzl
.github/workflows/: ci.yaml  release.yml
docs/: BUILD.bazel  repositories.md  rules.md  toolchain.md
example/run/: BUILD.bazel
kubedog/: BUILD.bazel  defs.bzl  repositories.bzl  toolchain.bzl
kubedog/private/: BUILD.bazel  toolchains_repo.bzl
kubedog/private/rules/: BUILD.bazel  multitrack.bzl
