load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

filegroup(
    name = "package_content",
    srcs = glob([
        "*.bzl",
        "*.bazel",
    ]) + [
        "//kubedog/private/rules:package_content",
    ],
    visibility = ["//kubedog:__pkg__"],
)

bzl_library(
    name = "toolchains_repo",
    srcs = ["toolchains_repo.bzl"],
    visibility = ["//kubedog:__subpackages__"],
)
