"Internal implementation details"

load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

exports_files(
    glob(["*.bzl"]),
    visibility = ["//docs:__pkg__"],
)

filegroup(
    name = "package_content",
    srcs = glob([
        "*.bzl",
        "*.bazel",
    ]),
    visibility = ["//kubedog/private:__pkg__"],
)

bzl_library(
    name = "kubedog_multitrack",
    srcs = ["multitrack.bzl"],
    visibility = ["//:__subpackages__"],
    deps = ["@bazel_skylib//lib:collections"],
)
